--- a/WebDev.html
+++ b/WebDev.html
@@ -30,7 +30,10 @@
 
         <div id="navsub">
             <ul class="navsub">
+              <li><a href="#top">Back To Top</a></li>
+              <li><a href="learn.html">Back To Learnt</a></li>
               <li><a href="#icon">Icon Production</a></li>
+              <li><a href="#HTML">HTML</a></li>
               <li><a href="#cscoke">CSS</a></li>
               <li><a href="#jakescrimp">Javascript</a></li>
             </ul>
@@ -53,18 +56,21 @@
               I borrowed a book from the Singapore Polytechnic library, <a href="http://www.websitedevelopmentbook.com/hindex.html" target="_blank">
               Introduciton To Web Development Using HTML5</a>. The link leads to a website that contains the essentials of the book.
               The condensed content from the website greatly aided in the coding of this website, with the most used sections of the book being the chapters shown below:
-              <ul>
-              <li>Chapter 2: Integrating Images</li>
-              <li>Chapter 3: Using Hyperlinks to Connect Content</li>
-              <li>Chapter 4: Presenting Lists</li>
-              <li>Chapter 5: Formatting Content with Tables</li>
-              <li>Chapter 7: Styling Content Using Cascading Style Sheets</li>
-              <li>Chapter 8: Advanced CSS</li>
+              <ul class="list1">
+                <li>Chapter 2: Integrating Images</li>
+                <li>Chapter 3: Using Hyperlinks to Connect Content</li>
+                <li>Chapter 4: Presenting Lists</li>
+                <li>Chapter 5: Formatting Content with Tables</li>
+                <li>Chapter 7: Styling Content Using Cascading Style Sheets</li>
+                <li>Chapter 8: Advanced CSS</li>
               </ul>
             </p>
+
+            <br>
             <br>
             <p>
               <a id="icon"></a>
+              <hr>
               <h3>Icon Production</h3>
               I used a <a href="https://www.pixilart.com/draw#" target="_blank">pixel art website</a>, pixilart.com to make the browser icon used for this website,
               which is a stylised yellow letter Y on a grey circle for its background, as shown below:
@@ -126,23 +132,55 @@
               Actual version used, 32x32 pixels
               <img src="Images/iconEP1000v5.png">
               <br>
+              Since there was a need to change the icon from pixel based to vector based, i decided to change the entire icon to something that is more cursive and a little more artistic.
             </p>
-
-
+            <br>
+            <a id="HTML"></a>
+            <hr>
+            <h3>HTML</h3>
+            <p>
+              HTML stands for HyperText Markup Language,it is the standard markup language for documents designed to be displayed in a web browser. HTML is used to create structured documents by denoting structural semantics for text such as
+              headings, paragraphs, lists, links, quotes, and other items.
+              <br>
+              HTML elements are delineated by tags, written using angle brackets. Tags such as &lt;img&gt; and &lt;input&gt; directly introduce content into the page.
+              Otherwise, tags such as &lt;p&gt; surround and provide information about document text and may include other tags as sub-elements.
+              <br>
+              Browsers do not display the HTML tags but use them to interpret the content of the page.
+            </p>
             <br>
             <a id="cscoke"></a>
+            <hr>
             <h3>CSS</h3>
             <p>
-              CSS stands for Cascading Style Sheets, it is a method used to describe the presentaion of a document written in languages such as HTML(HyperText Markup Language) or XML(eXtendable Markup Language)
-              CSS enables programmers to change the look, feel and overall presentaion of a website, allowing developers to customise every aspect of their websites to their liking.
-              This is a website i personally used as reference: <a href="https://www.w3schools.com/" target="_blank">w3schools.com</a>
+              CSS stands for Cascading Style Sheets, it is a method used to describe the presentaion of a document written in languages such as HTML <b>(HyperText Markup Language)</b> or XML <b>(eXtendable Markup Language)</b>
+              enables programmers to change the look, feel and overall presentaion of a website, allowing developers to customise every aspect of their websites to their liking.
+              The website template used as first draft for this site is detailed in <a href="https://www.youtube.com/watch?v=0afZj1G0BIE&list=PLlj9BrHKq9WKaz8UV3BjEqicn-C3qHxy4&index=6" target="blank"> this video by Jake Wright. </a>
+              <br>
+              Massively helpful reference website for CSS: <a href="https://www.w3schools.com/css/default.asp" target="_blank">w3schools.com</a>
             </p>
+            <p>
+            Examples of CSS being used to modify look of text:
+            <ul>
+              <li style="color:#0000ff;">Blue coloured line of text</li>
+              <li style="color:#00ff00;font-size: 3vw; font-weight: bold;">Green coloured, larger, bolded font line of text</li>
+              <li style="color:#ff0000; font-style: italic;">Red coloured, italic line of text</li>
+              <li style="color:#ffff00; font-family: 'Roboto';">Yellow coloured, Roboto font line of text</li>
+            </ul>
+
+            Examples of CSS being used to modify look of link text:
+            <ul>
+              <li><a href="https://twitter.com/" target="blank">Plain Link to Twitter</a></li>
+              <li><a style="color:#c800c8;" href="https://www.google.com/" target="blank">Purple Coloured link to Google</a></li>
+              <li><a style="color:#ffff00; font-style: italic;" href="https://www.youtube.com/" target="blank">Yellow coloured italic link to Youtube</a></li>
+            </ul>
+
             <br>
             <br>
             <a id="jakescrimp"></a>
             <h3>Javascript</h3>
             <p>
-              Javascript is a part of website development that i have not touched. 
+              Javascript is a part of website development that i have not touched.
+
 
             </p>
             <br>
