--- a/learn.html
+++ b/learn.html
@@ -30,6 +30,7 @@
 
         <div id="navsub">
             <ul class="navsub">
+              <li><a href="#top">Back To Top</a></li>
               <li><a href="webdev.html">Web Development</a></li>
               <li><a href="#CadChess">CAD</a></li>
               <li><a href="#3Dprint">3D Printing</a></li>
@@ -47,7 +48,7 @@
           <h2>Skills Learnt From EP1000 Module</h2>
             <br>
             <hr>
-            <h6><a href="https://rdorville.github.io/EP1000/">Website by lecturer on all things related to EP 1000</a></h6>
+            <h6><a href="https://rdorville.github.io/EP1000/" target="_blank">Website by lecturer on all things related to EP 1000</a></h6>
             <hr>
             <br>
             <a id="webdev"></a>
@@ -103,21 +104,28 @@
             <p>
               CSS stands for Cascading Style Sheets, it is a method used to describe the presentaion of a document written in languages such as HTML <b>(HyperText Markup Language)</b> or XML <b>(eXtendable Markup Language)</b>
               enables programmers to change the look, feel and overall presentaion of a website, allowing developers to customise every aspect of their websites to their liking.
-              This is a website i personally used as reference to start the first draft of this site:
+              The website template used as first draft for this site is detailed in <a href="https://www.youtube.com/watch?v=0afZj1G0BIE&list=PLlj9BrHKq9WKaz8UV3BjEqicn-C3qHxy4&index=6" target="blank"> this video by Jake Wright </a>
             </p>
             <br>
+            <p>
+            Examples of CSS being used to great effect:
+            <ul>
+              <li style="color:#0000ff;">Blue coloured line of text</li>
+              <li style="color:#00ff00;font-size: 5vw;">Green coloured, large font line of text</li>
+              <li><a href="https://www.google.com/" target="blank">Link to google.com</a></li>
+            </ul>
+          </p>
             <br>
             <h4>Javascript</h4>
             <p>
+              Javascript is used in website development to aid or enable the use of:
               <dl>
-                <dd>USB power supply with built in replacable battery</dd>
-                <dd>Direct USB power when charged</dd>
-                <dd>Night light intensity and Brightness individually adjustable </dd>
-                <dd>Swivel and rotating joints for freedom in lamp location and direction</dd>
-                <dd>Illuminated user interface</dd>
-                <dd>2 in 1 table clamp and stand combination</dd>
+                <li>Dynamically Updating Content</li>
+                <li>Multimedia Control</li>
+                <li>Animate Images</li>
+                <li>Others unmentioned</li>
               </dl>
-
+              JavaScript is a scripting language that is plenty useful in supplementing the shortfalls of both HTML and CSS, completing websites that are otherwise impossible to make.
             </p>
             <br>
             <hr>
@@ -135,6 +143,8 @@
             <br>
             <a id="lascut"></a>
             <h3>Laser Cutting</h3>
+            <h4>
+            <>
             <br>
             <hr>
             <br>
