--- a/personalpage.html
+++ b/personalpage.html
@@ -41,12 +41,11 @@
           <br>
           <img src="Images/SNAIL.jpg">
           <br>
-
           <h2 style="text-align: center;">Full Name: Ang Yue Yang</h2>
           <br>
-
-          <h3 style="text-align: center;"><a href= mailto: Email: AYANG75.20@ichat.sp.edu.sg>Email: AYANG75.20@ichat.sp.edu.sg (click to email)</a></h3>
-
+          <h3 style="text-align: center;"
+          <a href= mailto: Email: AYANG75.20@ichat.sp.edu.sg>Email: AYANG75.20@ichat.sp.edu.sg (click to email)</a
+          </h3>
           <p style="text-align: center;">
           Address: Seng Kang Town, Singapore City
           <br>
