--- a/project.html
+++ b/project.html
@@ -31,6 +31,7 @@
 
         <div id="navsub">
             <ul class="navsub">
+              <li><a href="#top">Back To Top</a></li>
               <li><a href="#ideation">Ideation</a></li>
               <li><a href="#MarketR">Market Research</a></li>
               <li><a href="#1Design">Initial Design</a></li>
@@ -38,6 +39,15 @@
               <li><a href="#Production">Production</a></li>
               <li><a href="#Showcase">Showcase</a></li>
             </ul>
+        </div>
+
+        <div class="navsub">
+          <li><a href="#ideation"><button class="button">Ideation</button></a></li>
+          <li><button class="button">B2</button></li>
+          <li><button class="button">B3</button></li>
+          <li><button class="button">B4</button></li>
+          </ul>
+          <p style="clear:both">
         </div>
 
         <div id="main">
