--- a/WebDev.html
+++ b/WebDev.html
@@ -2,10 +2,10 @@
   <head>
     <meta charset="utf-8">
     <title>
-      YY EP1000
+      EP1000 Yue Yang
     </title>
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
-    <link rel="shortcut icon" type="image/png" href="Images/iconEP1000v5.png">
+    <link rel="shortcut icon" type="image/svg" href="Images/IconRedoSS.svg">
   </head>
 
   <body>
@@ -19,27 +19,25 @@
 
         <div id="navmain">
             <ul class="navmain">
-              <li><a href="#top">Back To Top</a></li>
-              <li><a href="index.html">Home</a></li>
-              <li><a href="personalpage.html">About Me</a></li>
-              <li><a href="expect.html">Expectations</a></li>
-              <li><a href="learn.html">EP1000 Class</a></li>
-              <li><a href="project.html">Main Project</a></li>
+              <li><a style="color:#32ff32;" href="#top">Back To Top</a></li>
+              <li><a href="index.html" class="button">Home</a></li>
+              <li><a href="personalpage.html" class="button">About Me</a></li>
+              <li><a href="expect.html" class="button">Expectations</a></li>
+              <li><a href="learn.html" class="button">EP1000 Class</a></li>
+              <li><a href="project.html" class="button">Main Project</a></li>
             </ul>
         </div>
 
         <div id="navsub">
             <ul class="navsub">
-              <li><a href="#top">Back To Top</a></li>
-              <li><a href="learn.html">Back To Learnt</a></li>
-              <li><a href="#icon">Icon Production</a></li>
-              <li><a href="#HTML">HTML</a></li>
-              <li><a href="#cscoke">CSS</a></li>
-              <li><a href="#jakescrimp">Javascript</a></li>
+              <li><a style="color:#32ff32;" href="#top" class="button">Back To Top</a></li>
+              <li><a style="color:#ff9600;" href="learn.html" class="button">Back To EP1000</a></li>
+              <li><a href="#icon" class="button">Icon Production</a></li>
+              <li><a href="#HTML" class="button">HTML</a></li>
+              <li><a href="#cscoke" class="button">CSS</a></li>
+              <li><a href="#jakescrimp" class="button">Javascript</a></li>
             </ul>
         </div>
-
-
 
         <div id="main">
           <h2>Skills Learnt From EP1000 Module</h2>
