--- a/learn.html
+++ b/learn.html
@@ -2,10 +2,10 @@
   <head>
     <meta charset="utf-8">
     <title>
-      YY EP1000
+      EP1000 Yue Yang
     </title>
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
-    <link rel="shortcut icon" type="image/png" href="Images/iconEP1000v5.png">
+    <link rel="shortcut icon" type="image/svg" href="Images/IconRedoSS.svg">
   </head>
 
   <body>
@@ -18,34 +18,35 @@
       <div id="content">
 
         <div id="navmain">
-            <ul class="navmain">
-              <li><a href="#top">Back To Top</a></li>
-              <li><a href="index.html">Home</a></li>
-              <li><a href="personalpage.html">About Me</a></li>
-              <li><a href="expect.html">Expectations</a></li>
-              <li><a href="learn.html">EP1000 Class</a></li>
-              <li><a href="project.html">Main Project</a></li>
-            </ul>
+          <ul class="navmain">
+            <li><a style="color:#32ff32;" href="#top">Back To Top</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="personalpage.html">About Me</a></li>
+            <li><a href="expect.html">Expectations</a></li>
+            <li><a href="learn.html">EP1000 Class</a></li>
+            <li><a href="project.html">Main Project</a></li>
+          </ul>
         </div>
 
         <div id="navsub">
-            <ul class="navsub">
-              <li><a href="#top">Back To Top</a></li>
-              <li><a href="webdev.html">Web Development</a></li>
-              <li><a href="#CadChess">CAD</a></li>
-              <li><a href="#3Dprint">3D Printing</a></li>
-              <li><a href="#lascut">Laser Cutting</a></li>
-              <li><a href="#electronic">Electronics</a></li>
-              <li><a href="#arduino">Arduino</a></li>
-              <li><a href="#input">Input Devices</a></li>
-              <li><a href="#output">Output Devices</a></li>
-            </ul>
+          <ul class="navsub">
+            <li><a style="color:#32ff32;" href="#top">Back To Top</a></li>
+            <li><a href="WebDev.html">Web Development</a></li>
+            <li><a href="#CadChess">CAD</a></li>
+            <li><a href="#3Dprint">3D Printing</a></li>
+            <li><a href="#lascut">Laser Cutting</a></li>
+            <li><a href="#electronic">Electronics</a></li>
+            <li><a href="#arduino">Arduino</a></li>
+            <li><a href="#input">Input Devices</a></li>
+            <li><a href="#output">Output Devices</a></li>
+          </ul>
         </div>
 
 
 
         <div id="main">
           <h2>Skills Learnt From EP1000 Module</h2>
+
             <br>
             <hr>
             <h6><a href="https://rdorville.github.io/EP1000/" target="_blank">Website by lecturer on all things related to EP 1000</a></h6>
