--- a/project.html
+++ b/project.html
@@ -2,11 +2,10 @@
   <head>
     <meta charset="utf-8">
     <title>
-      YY EP1000
+      EP1000 Yue Yang
     </title>
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
-    <link rel="stylesheet" type="text/css" href="lightmode.css">
-    <link rel="shortcut icon" type="image/png" href="Images/iconEP1000v5.png">
+    <link rel="shortcut icon" type="image/svg" href="Images/IconRedoSS.svg">
   </head>
 
   <body>
@@ -20,7 +19,7 @@
 
         <div id="navmain">
             <ul class="navmain">
-              <li><a href="#top">Back To Top</a></li>
+              <li><a style="color:#32ff32;" href="#top">Back To Top</a></li>
               <li><a href="index.html">Home</a></li>
               <li><a href="personalpage.html">About Me</a></li>
               <li><a href="expect.html">Expectations</a></li>
@@ -31,7 +30,7 @@
 
         <div id="navsub">
             <ul class="navsub">
-              <li><a href="#top">Back To Top</a></li>
+              <li><a style="color:#32ff32;" href="#top">Back To Top</a></li>
               <li><a href="#ideation">Ideation</a></li>
               <li><a href="#MarketR">Market Research</a></li>
               <li><a href="#1Design">Initial Design</a></li>
@@ -39,15 +38,6 @@
               <li><a href="#Production">Production</a></li>
               <li><a href="#Showcase">Showcase</a></li>
             </ul>
-        </div>
-
-        <div class="navsub">
-          <li><a href="#ideation"><button class="button">Ideation</button></a></li>
-          <li><button class="button">B2</button></li>
-          <li><button class="button">B3</button></li>
-          <li><button class="button">B4</button></li>
-          </ul>
-          <p style="clear:both">
         </div>
 
         <div id="main">
