--- a/personalpage.html
+++ b/personalpage.html
@@ -2,10 +2,10 @@
   <head>
     <meta charset="utf-8">
     <title>
-      YY EP1000
+      EP1000 Yue Yang
     </title>
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
-    <link rel="shortcut icon" type="image/png" href="Images/iconEP1000v5.png">
+    <link rel="shortcut icon" type="image/svg" href="Images/IconRedoSS.svg">
   </head>
 
   <body>
@@ -19,7 +19,7 @@
 
         <div id="navmain">
             <ul class="navmain">
-              <li><a href="#top">Back To Top</a></li>
+              <li><a style="color:#32ff32;" href="#top">Back To Top</a></li>
               <li><a href="index.html">Home</a></li>
               <li><a href="personalpage.html">About Me</a></li>
               <li><a href="expect.html">Expectations</a></li>
@@ -30,7 +30,7 @@
 
         <div id="navsub">
             <ul class="navsub">
-              <li><a href="#top">Back To Top</a></li>
+              <li><a style="color:#32ff32;" href="#top">Back To Top</a></li>
             </ul>
         </div>
 
