--- a/CCAADD.html
+++ b/CCAADD.html
@@ -13,7 +13,7 @@
     <div id="container">
       <div id="header">
         <h1>EP1000 Digital Fabrication & Prototyping</h1>
-        <h4>About Me</h4>
+        <h4>P2010773</h4>
       </div>
       <div id="content">
 
@@ -25,7 +25,6 @@
               <li><a href="expect.html">Expectations</a></li>
               <li><a href="learn.html">EP1000 Class</a></li>
               <li><a href="project.html">Main Project</a></li>
-            </ul>
         </div>
 
         <div id="navsub">
@@ -35,34 +34,14 @@
         </div>
 
         <div id="main">
-          <br>
-          <h2 style= "text-align: center;">All about this face's owner</h2>
-          <br>
-          <br>
-          <img src="Images/SNAIL.jpg">
-          <br>
-          <h2 style="text-align: center;">Full Name: Ang Yue Yang</h2>
-          <br>
-          <h3 style="text-align: center;"
-          <a href= mailto: Email: AYANG75.20@ichat.sp.edu.sg>Email: AYANG75.20@ichat.sp.edu.sg (click to email)</a
-          </h3>
-          <p style="text-align: center;">
-          Address: Seng Kang Town, Singapore City
-          <br>
-          Course of Study: Diploma in Aeronautical Engineering (DARE)
-          <br>
-          Likes: .....
-          <br>
-          Dislikes: .....
-          <br>
-          Hobbies: .....
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          No, i am not putting actual personal information onto the website i made for this EP1000
-          </p>
+          <h2>Home Page</h2>
+            <br>
+            <h4>Introduction To EP1000</h4>
+            <br>
+            <h3>Digital Fabrication and Prototyping</h3>
+
+            <p><iframe src="https://ichat2788.autodesk360.com/shares/public/SH9285eQTcf875d3c5394c035d1e374253f8?mode=embed" width="100%" height="80%" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"  frameborder="0"></iframe></p>
+
 
         </div>
       </div>
