--- a/learn.html
+++ b/learn.html
@@ -2,10 +2,10 @@
   <head>
     <meta charset="utf-8">
     <title>
-      EP1000 Yue Yang
+     EP1000 Yue Yang
     </title>
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
-    <link rel="shortcut icon" type="image/svg" href="Images/IconRedoSS.svg">
+    <link rel="shortcut icon" type="image/svg" href="Images/IconRedoSS.wmf">
   </head>
 
   <body>
@@ -31,8 +31,9 @@
         <div id="navsub">
           <ul class="navsub">
             <li><a style="color:#32ff32;" href="#top">Back To Top</a></li>
+            <li><a>Click on the following for more details</a></li>
             <li><a href="WebDev.html">Web Development</a></li>
-            <li><a href="#CadChess">CAD</a></li>
+            <li><a href="CCAADD.html">CAD</a></li>
             <li><a href="#3Dprint">3D Printing</a></li>
             <li><a href="#lascut">Laser Cutting</a></li>
             <li><a href="#electronic">Electronics</a></li>
