--- a/expect.html
+++ b/expect.html
@@ -2,10 +2,10 @@
   <head>
     <meta charset="utf-8">
     <title>
-      EP1000 Yue Yang
+     EP1000 Yue Yang
     </title>
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
-    <link rel="shortcut icon" type="image/svg" href="Images/IconRedoSS.svg">
+    <link rel="shortcut icon" type="image/svg" href="Images/IconRedoSS.wmf">
   </head>
 
   <body>
